# india-runs-ai-recruiter

./: .env.example  .gitignore  Makefile  README.md  README_SANDBOX.md  app.py  pyproject.toml  requirements.txt  submission_metadata.yaml
backend/: __init__.py
backend/agents/: behaviour_analyst.py  candidate_analyst.py  critic_agent.py  jd_analyst.py  ranking_agent.py  ranking_strategy.py  recruiter_agent.py  retrieval_agent.py  security_filter.py
backend/api/: main.py
backend/cache/: __init__.py  cache_keys.py  cache_manager.py  disk_cache.py
backend/constants/: __init__.py  countries.py  industries.py  seniority.py  skills.py  work_modes.py
backend/core/: settings.py
backend/domain/: __init__.py  normalized_candidate.py  normalized_job.py
backend/embeddings/: __init__.py  encoder.py
backend/evaluation/: benchmark_suite.py
backend/explainability/: explainer.py
configs/: aliases.yaml  embedding.yaml  industries.yaml  pipeline.yaml  prompts.yaml  skills.yaml  titles.yaml
docs/: architecture.md  competition_readiness.md
output/: benchmark_report.json  explainability_report.md  submission.csv  submission.xlsx  submission.xml
output_val/: explainability_report.md  submission.xml
scripts/: benchmark_retrieval.py  build_index.py  demo_search.py  preflight.py  rank.py  rank_candidates.py  run_pipeline.py  smoke_test.py  test_resume.py  test_structured_output.py  validate_small_pipeline.py  verify_index.py
tests/: test_candidate_mapper.py  test_data_foundation.py  test_final_phase.py  test_phase3.py  test_retrieval.py  test_schemas.py
(+67 files in other folders)
