[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "india-runs-ai-recruiter"
version = "0.1.0"
description = "AI-powered candidate ranking system for the India Runs Data & AI Challenge"
requires-python = ">=3.12"
dependencies = [
    # Backend
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    # AI (Phase 2+)
    "google-adk>=0.3.0",
    "sentence-transformers>=3.0.0",
    "faiss-cpu>=1.8.0",
    "transformers>=4.41.0",
    # Data
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "python-docx>=1.1.2",
    "orjson>=3.10.3",
    "pyyaml>=6.0.1",
    # Validation
    "pydantic>=2.0",
    # Structured Logging
    "structlog>=24.1.0",
    # Config
    "pydantic-settings>=2.2.0",
    # Env
    "python-dotenv>=1.0.0",
    "google-genai>=2.10.0",
    "tenacity>=9.1.4",
    "gradio>=5.0.0",
    "openpyxl>=3.1.5",
]

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.2.0",
    "psutil>=7.2.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
